<resources>
    <string name="app_name">Portfolio</string>
    <string name="copyright">Copyright 2021. KSJ. PortFollo</string>
<!--    Key-->
    <string name="kakao_api">cf23d7b83f2ba7af13f7bf203a950183</string>
    <string name="naver_client_id">JV9TxKcClc3tDB2eOCHm</string>
    <string name="naver_client_secret">dn0_WXAPqd</string>
    <string name="naver_client_name">포트폴리오</string>

<!--    Splash-->
    <string name="intro_title">안녕하세요 강석주입니다.\n\n본 화면은 인트로 화면입니다.</string>
    <string name="intro_lang">*본 어플은 시스템설정에 의해 영문으로 교체가능합니다.</string>

<!--    Login-->
    <string name="login_tilte">PortFolio</string>
    <string name="login_sign_check_error">가입하는 이메일정보 입력을 위해 동의항목 체크 부탁드립니다.</string>
    <string name="login_naver_wait">네이버와 연동 중입니다 잠시만 기다려주세요.</string>
    <string name="login_naver_success">네이버에 성공적으로 연결했습니다.</string>
    <string name="login_kakao_wait">카카오와 연동 중입니다 잠시만 기다려주세요.</string>
    <string name="login_use_title">가입된 계정의 닉네임</string>

<!--    Sign-->
    <string name="sign_other">회원가입 종류</string>
    <string name="sign_email">이메일로 가입</string>
    <string name="sign_naver">네이버로 가입</string>
    <string name="sign_kakao">카카오로 가입</string>
    <string name="sign_google">구글로 가입</string>
    <string name="sign_nickname_enter">닉네임을 입력 해주세요.</string>
    <string name="sign_password_enter">입력하신 비밀번호를 확인 해주세요.</string>
    <string name="sign_success">가입에 성공하셨습니다. 가입을 축하드립니다~!</string>

<!--    공용-->
    <string name="common_email">이메일</string>
    <string name="common_pw">패스워드</string>
    <string name="common_login">로그인</string>
    <string name="common_pw_reset">비밀번호 재설정</string>
    <string name="common_signup">회원가입</string>
    <string name="common_login_auto">자동 로그인</string>
    <string name="common_cancle">취소</string>
    <string name="common_nickname">닉네임</string>
    <string name="common_pw_confirm">패스워드 확인</string>
    <string name="common_confirm">확인</string>
    <string name="common_do_signup">가입하기</string>
    <string name="common_intro">인트로</string>
    <string name="common_splash">스플레쉬</string>
    <string name="common_email_addr">이메일 주소</string>
    <string name="common_complet">완료</string>
    <string name="common_not_empty">공백없이 입력해주세요</string>

<!--    error-->
    <string name="error_email_form">올바른 E-Mail 형식이 아닙니다. 다시 시도해주세요.</string>
    <string name="error_email_use">이미 사용중인 이메일입니다.</string>
    <string name="error_pass_form">비밀번호는 영문, 숫자, 특수문자를 혼합하여 최소 8자리 ~ 최대 20자리 이내로 입력해주세요.</string>
    <string name="error_pass_no_empty">비밀번호을 공백없이 입력해주세요.</string>
    <string name="error_email_no_empty">이메일을 공백없이 입력해주세요.</string>
    <string name="common_backpress">뒤로가기 버튼을 한번 더 누르면 종료합니다.</string>
    <string name="sign_nickname_sub">닉네임을 입력해주세요. 아이디 찾기에 사용됩니다.</string>
    <string name="sign_email_sub">이메일을 입력해주세요. 비밀번호 찾기에 사용됩니다.</string>
    <string name="common_findtoid">아이디 찾기</string>
    <string name="common_findtopw">비밀번호 찾기</string>
    
    <string name="error_login_failed">로그인에 실패했습니다. 다시 시도해주세요.</string>
    <string name="findtoid_have_not">가입내역없음</string>
    <string name="findtoid_main">등록된 회원이 아닙니다.\n회원가입을 진행해 주세요.</string>
    <string name="findtoid_result">가입되신 아이디는</string>
    <string name="common_that">입니다.</string>

    <string name="findtopw_email_process">가입할 때 등록한 이메일 주소를 입력하세요.\n비밀번호 재설정을 위한 인증 이메일이 발송됩니다.</string>
    <string name="findtopw_email_title">포트폴리오 - 비밀번호 찾기</string>
    <string name="findtopw_email_body">"님의 비밀번호는 : "</string>
    <string name="common_email_find">이메일 찾기</string>
    <string name="findtopw_send_email">입력하신 이메일에 비밀번호가 전송되었습니다.</string>
    <string name="sign_password_result">비밀번호를 다시 한번 입력 해주세요.</string>
    <string name="common_home">홈</string>
    <string name="common_map">지도</string>
    <string name="common_chart">차트</string>
    <string name="common_my">내정보</string>
    <string name="common_setting">설정</string>
    <string name="common_empty" />
    <string name="findtopw_not_match">입력하신 이메일의 회원정보가 없습니다.</string>
    <string name="findtopw_smtp_dont">"현재 AES256, SMTP를 이용하여 이메일 전송을 구현했으나, 전송이 안되어 간이적으로 비밀번호를 알려드립니다. 비밀번호는 : "</string>
    <string name="login_kakao_no_email">이메일이 미등록된 카카오 계정입니다.</string>
    <string name="common_success">성공</string>
    <string name="sign_use">등록된 회원이 존재합니다.</string>
    <string name="common_failed">실패</string>

</resources>