<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_navigation"
    app:startDestination="@+id/navigation_splash">

    <fragment
        android:id="@+id/navigation_splash"
        android:name="com.ko.ksj.portfolio.view.login.splash.SplashFrag"
        android:label="@string/common_splash"
        tools:layout="@layout/fragment_login_splash">
        <action
            android:id="@+id/action_navigation_splash_to_navigation_intro"
            app:destination="@id/navigation_intro" />
        <action
            android:id="@+id/action_navigation_splash_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_intro"
        android:name="com.ko.ksj.portfolio.view.login.splash.IntroFrag"
        android:label="@string/common_intro"
        tools:layout="@layout/fragment_login_intro">
        <action
            android:id="@+id/action_navigation_intro_to_navigation_login"
            app:destination="@id/navigation_login" />
    </fragment>

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.ko.ksj.portfolio.view.login.LoginFrag"
        android:label="@string/common_login"
        tools:layout="@layout/fragment_login_login">
        <action
            android:id="@+id/action_navigation_login_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_login_to_navigation_signup"
            app:destination="@id/navigation_signup" />
        <action
            android:id="@+id/action_navigation_login_to_navigation_findtoid"
            app:destination="@id/navigation_findtoid" />
        <action
            android:id="@+id/action_navigation_login_to_navigation_findtopw"
            app:destination="@id/navigation_findtopw" />
    </fragment>

    <fragment
        android:id="@+id/navigation_signup"
        android:name="com.ko.ksj.portfolio.view.login.signup.SignupFrag"
        android:label="@string/common_signup"
        tools:layout="@layout/fragment_login_sign_up">
        <action
            android:id="@+id/action_navigation_signup_to_navigation_login"
            app:destination="@id/navigation_login" />
    </fragment>

    <fragment
        android:id="@+id/navigation_findtoid"
        android:name="com.ko.ksj.portfolio.view.login.findtoid.FindToIdFrag"
        android:label="@string/common_findtoid"
        tools:layout="@layout/fragment_login_findtoid">

        <action
            android:id="@+id/action_navigation_findtoid_to_navigation_login"
            app:destination="@id/navigation_login" />
        <action
            android:id="@+id/action_navigation_findtoid_to_navigation_signup"
            app:destination="@id/navigation_signup" />
    </fragment>

    <fragment
        android:id="@+id/navigation_findtopw"
        android:name="com.ko.ksj.portfolio.view.login.findtopw.FindToPwFrag"
        android:label="@string/common_findtopw"
        tools:layout="@layout/fragment_login_findtopw">
        <action
            android:id="@+id/action_navigation_findtopw_to_navigation_login"
            app:destination="@id/navigation_login" />

    </fragment>

</navigation>