<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp.SignUpActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.3">

        <EditText
            android:id="@+id/SignIn_EDTName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/common_nickname"
            android:paddingLeft="12dp"
            android:paddingVertical="12dp"
            android:textSize="16sp"
            android:background="@drawable/shape_login_btn"
            android:inputType="text"
            android:textColorHint="#C7C7C7" />

        <EditText
            android:id="@+id/SignIn_EDTEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingLeft="12dp"
            android:paddingVertical="12dp"
            android:hint="@string/common_email"
            android:textSize="16sp"
            android:background="@drawable/shape_login_btn"
            android:inputType="textEmailAddress"
            android:textColorHint="#C7C7C7" />


        <EditText
            android:id="@+id/SignIn_EDTPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/common_pw"
            android:paddingLeft="12dp"
            android:paddingVertical="12dp"
            android:textSize="16sp"
            android:background="@drawable/shape_login_btn"
            android:inputType="textPassword"
            android:textColorHint="#C7C7C7" />

        <EditText
            android:id="@+id/SignIn_EDTPassOk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingLeft="12dp"
            android:paddingVertical="12dp"
            android:hint="@string/common_pw_confirm"
            android:textSize="16sp"
            android:background="@drawable/shape_login_btn"
            android:inputType="textPassword"
            android:textColorHint="#C7C7C7" />

    </LinearLayout>



    <Button
        android:id="@+id/Sign_BTNSignIn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textColor="#ffffff"
        android:textFontWeight="300"
        android:textSize="16sp"
        android:layout_marginHorizontal="30dp"
        android:fontFamily="@font/esamanru"
        android:text="@string/common_do_signup"
        android:background="@drawable/shape_login_btn_sub"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>