<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="user"
            type="com.ko.ksj.portfolio.model.User" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/esamanru"
            android:text="@string/findtopw_email_process"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/xxxsp_17"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25" />

        <TextView
            android:id="@+id/TV_Login_FindToPw_Error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/maru"
            android:textAlignment="center"
            android:textColor="@color/Red"
            android:textSize="@dimen/xxxsp_15"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4" />

        <LinearLayout
            android:id="@+id/LL_Login_FindToPw_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/xxxdpi_65"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5">

            <TextView
                android:id="@+id/TV_Login_FindToPw_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:layout_marginBottom="@dimen/xxxdpi_8"
                android:includeFontPadding="false"
                android:text="@string/common_email"
                android:textColor="@color/black"
                android:textSize="@dimen/xxxsp_12" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/EDT_Login_FindToPw_Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="2dp"
                    android:background="@color/trans"
                    android:hint="@string/common_email_addr"
                    android:text="@{user.email}"
                    android:includeFontPadding="false"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/xxxsp_17" />

            </RelativeLayout>

            <View
                android:id="@+id/View_Login_FindToPw_line"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:background="@color/DarkGray" />

        </LinearLayout>

        <Button
            android:id="@+id/BTN_Login_FindToPw_BTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Thin_White"
            android:fontFamily="@font/selgothic"
            android:text="@string/common_complet"
            android:textColor="@color/white"
            android:textSize="@dimen/xxxsp_17"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>