<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="user"
            type="com.ko.ksj.portfolio.model.User" />
        <variable
            name="viewModel"
            type="com.ko.ksj.portfolio.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.MainActivity">

        <ImageView
            android:id="@+id/IV_Login_FindToID_NotAuth1"
            android:layout_width="80dp"
            android:layout_height="85dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.35" />

        <TextView
            android:id="@+id/TV_Login_FindToID_NotAuth1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/selgothic"
            android:textAlignment="center"
            android:textColor="@color/Medium_Gray"
            android:textSize="@dimen/xxxsp_17"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.55" />

        <TextView
            android:id="@+id/TV_Login_FindToID_NotAuth2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/selgothic"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/xxxsp_17"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.65" />

        <TextView
            android:id="@+id/TV_Login_FindToId_Auth1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="65dp"
            android:fontFamily="@font/esamanru"
            android:text="@string/login_use_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <LinearLayout
            android:id="@+id/LL_Login_FindToId_Auth1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="65dp"
            android:orientation="vertical"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4">

            <TextView
                android:id="@+id/TV_Login_FindToID_NickNameSub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:layout_marginBottom="8dp"
                android:includeFontPadding="false"
                android:text="@string/common_nickname"
                android:textColor="@color/Medium_Gray" />

            <EditText
                android:id="@+id/EDT_Login_FindToID_NickName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:background="@color/trans"
                android:text="@{user.nick_name}"
                android:includeFontPadding="false"
                android:textColor="@color/black"
                android:textSize="@dimen/xxxsp_17" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:background="@color/Light_Gray" />
        </LinearLayout>

        <Button
            android:id="@+id/BTN_Login_FindToId_BTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Light_Gray"
            android:fontFamily="@font/esamanru"
            android:text="@string/common_complet"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>